--- a/ush/config_defaults.yaml
+++ b/ush/config_defaults.yaml
@@ -1378,28 +1378,14 @@ task_make_grid:
 #----------------------------
 # MAKE OROG config parameters
 #-----------------------------
-#-----------------------------------------------------------------------
-# KMP_AFFINITY_MAKE_OROG: 
-# Intel Thread Affinity Interface for the make_orog task. 
-# Settings for this task are disabled because this task does not use 
-# parallelized code.
-#
-# OMP_NUM_THREADS_MAKE_OROG: 
-# The number of OpenMP threads to use for parallel regions.
-#
-# OMP_STACKSIZE_MAKE_OROG: 
-# Controls the size of the stack for threads created by the OpenMP 
-# implementation.
-#
-# OROG_DIR: 
-# The directory containing pre-generated orography files to use when 
-# the MAKE_OROG task is not meant to run.
-#-----------------------------------------------------------------------
 task_make_orog:
   rundir: '{{ workflow.EXPTDIR + "/orog" if rocoto.tasks.get("task_make_orog") else "" }}'
-
   orog:
     execution:
+      batchargs:
+        nodes: 1
+        tasks_per_node: 24
+        walltime: 00:10:00
       threads: 6
       executable: "{{ workflow.EXECdir }}/orog"
       envcmds:
@@ -1419,10 +1405,14 @@ task_make_orog:
       nf2: 0
       efac: 0
       blat: 0
-    grid_file: "{{ workflow.FIXlam }}/{{ CRES | env }}{{ workflow.DOT_OR_UNDERSCORE }}grid.tile7.halo{{ grid_params.NHW }}.nc"
+    grid_file: "{{ workflow.FIXlam }}/{{ CRES | env }}_grid.tile7.halo{{ grid_params.NHW }}.nc"
     orog_file: "none"
   filter_topo:
     execution:
+      batchargs:
+        nodes: 1
+        tasks_per_node: 1
+        walltime: 00:05:00
       executable: "{{ workflow.EXECdir }}/filter_topo"
       envcmds:
         - module use {{ user.HOMEdir }}/modulefiles
@@ -1430,7 +1420,7 @@ task_make_orog:
     namelist:
       update_values:
         filter_topo_nml:
-          grid_file: "{{ workflow.FIXlam }}/{{ CRES | env }}{{ workflow.DOT_OR_UNDERSCORE }}mosaic.halo{{ grid_params.NHW }}.nc"
+          grid_file: "{{ workflow.FIXlam }}/{{ CRES | env }}_mosaic.halo{{ grid_params.NHW }}.nc"
           topo_file: "{{ task_make_orog.filtered_output }}"
           mask_field: land_frac
           regional: true
@@ -1440,16 +1430,25 @@ task_make_orog:
   shave0:
     shave:
       execution:
+        batchargs:
+          nodes: 1
+          tasks_per_node: 1
+          walltime: 00:05:00
         executable: "{{ workflow.EXECdir }}/shave"
         envcmds:
           - module use {{ user.HOMEdir }}/modulefiles
           - module load build_{{ user.MACHINE|lower }}_{{ workflow.COMPILER }}
       config: &shave_config
+        batchargs:
+          nodes: 1
+          tasks_per_node: 1
+          walltime: 00:05:00
         input_grid_file: "{{ task_make_orog.filtered_output }}"
+        output_grid_file: "{{ task_make_orog.rundir }}/{{ CRES | env }}_oro_data.tile{{ constants.TILE_RGNL }}.halo{{ constants.NH0 }}.nc"
         nhalo: "{{ constants.NH0 }}"
         nx: "{{ grid_params.NX }}"
         ny: "{{ grid_params.NY }}"
-      rundir: "{{ task_make_orog.rundir }}/shave0/"
+      rundir: "{{ task_make_orog.rundir }}/shave0"
   shave4:
     shave:
       execution:
@@ -1460,8 +1459,9 @@ task_make_orog:
       config:
         <<: *shave_config
         nhalo: "{{ constants.NH4 }}"
-      rundir: "{{ task_make_orog.rundir }}/shave4/"
-  filtered_output: "{{ task_make_orog.filter_topo.rundir }}/{{ CRES | env }}{{ workflow.DOT_OR_UNDERSCORE }}filtered_orog"
+        output_grid_file: "{{ task_make_orog.rundir }}/{{ CRES | env }}_oro_data.tile{{ constants.TILE_RGNL }}.halo{{ constants.NH4 }}.nc"
+      rundir: "{{ task_make_orog.rundir }}/shave4"
+  filtered_output: "{{ task_make_orog.filter_topo.rundir }}/{{ CRES | env }}_filtered_orog"
 task_make_sfc_climo:
   KMP_AFFINITY_MAKE_SFC_CLIMO: "scatter"
   OMP_NUM_THREADS_MAKE_SFC_CLIMO: 1
