--- a/ush/config_defaults.yaml
+++ b/ush/config_defaults.yaml
@@ -1410,7 +1410,7 @@ task_make_orog:
     rundir: "{{ task_make_orog.rundir }}/orog"
   filter_topo:
     config:
-      filtered_orog: "{{ task_make_orog.filtered_output }}"
+      filtered_orog: "{{ 'CRES' | env }}_filtered_orog.tile{{ constants.TILE_RGNL }}.nc"
       input_grid_file: "{{ workflow.FIXlam }}/{{ 'CRES' | env }}_grid.tile7.halo{{ grid_params.NHW }}.nc"
       input_raw_orog: "{{ task_make_orog.orog.rundir }}/out.oro.nc"
     execution:
@@ -1463,7 +1463,7 @@ task_make_orog:
         nhalo: !int "{{ constants.NH4 }}"
         output_grid_file: "{{ task_make_orog.rundir }}/{{ 'CRES' | env }}_oro_data.tile{{ constants.TILE_RGNL }}.halo{{ constants.NH4 }}.nc"
       rundir: "{{ task_make_orog.rundir }}/shave4"
-  filtered_output: "{{ task_make_orog.filter_topo.rundir }}/{{ 'CRES' | env }}_filtered_orog.tile{{ constants.TILE_RGNL }}.nc"
+  filtered_output: "{{ task_make_orog.filter_topo.rundir }}/{{ task_make_orog.filter_topo.config.filtered_orog }}"
 task_make_sfc_climo:
   KMP_AFFINITY_MAKE_SFC_CLIMO: "scatter"
   OMP_NUM_THREADS_MAKE_SFC_CLIMO: 1
