--- a/parm/wflow/default_workflow.yaml
+++ b/parm/wflow/default_workflow.yaml
@@ -38,8 +38,8 @@ rocoto:
     DATAROOT: '{{ nco.PTMP }}/&envir;/tmp'
     DCOMROOT: '{{ nco.PTMP }}/&envir;/dcom'
     COMIN_DIR: '{{ "&COMROOT;/&NET;/&model_ver;/&RUN;.@Y@m@d/@H" if user.RUN_ENVIR == "nco" else  workflow.EXPTDIR }}/@Y@m@d@H'
-    FCST_DIR: '{{ &DATAROOT;/run_fcst_mem#mem#_@Y@m@d@H  if user.RUN_ENVIR == "nco" else workflow.EXPTDIR }}/@Y@m@d@H'
-    LOGDIR: '{{ &COMROOT;/output/logs/@Y@m@d if user.RUN_ENVIR == "nco" else workflow.EXPTDIR }}/log'
+    FCST_DIR: '{{ "&DATAROOT;/run_fcst_mem#mem#_@Y@m@d@H"  if user.RUN_ENVIR == "nco" else workflow.EXPTDIR }}/@Y@m@d@H'
+    LOGDIR: '{{ "&COMROOT;/output/logs/@Y@m@d" if user.RUN_ENVIR == "nco" else workflow.EXPTDIR }}/log'
   attrs:
     cyclethrottle: "200"
     realtime: "F"
