--- a/parm/wflow/verify_ens.yaml
+++ b/parm/wflow/verify_ens.yaml
@@ -16,7 +16,7 @@ default_task_verify_ens: &default_task_verify_ens
   native: '{{ platform.SCHED_NATIVE_CMD }}'
   nnodes: 1
   nodes: '{{ nnodes }}:ppn={{ ppn }}'
-  partition: '{% if platform.get("PARTITION_DEFAULT") %}&PARTITION_DEFAULT;{% else %}None{% endif %}'
+  partition: '{{ "&PARTITION_DEFAULT;" if platform.get("PARTITION_DEFAULT") else "" }}'
   ppn: 1
   queue: '&QUEUE_DEFAULT;'
   walltime: 01:00:00
