--- a/parm/wflow/verify_pre.yaml
+++ b/parm/wflow/verify_pre.yaml
@@ -16,7 +16,7 @@ default_task_verify_pre: &default_task_verify_pre
   native: '{{ platform.SCHED_NATIVE_CMD }}'
   nnodes: 1
   nodes: '{{ nnodes }}:ppn={{ ppn }}'
-  partition: '{% if platform.get("PARTITION_DEFAULT") %}&PARTITION_DEFAULT;{% else %}None{% endif %}'
+  partition: '{{ "&PARTITION_DEFAULT;" if platform.get("PARTITION_DEFAULT") else "" }}'
   ppn: 1
   queue: '&QUEUE_DEFAULT;'
   walltime: 00:30:00
@@ -31,7 +31,7 @@ task_get_obs_ccpa:
     OBTYPE: 'CCPA'
     FHR: '{% for h in range(0, workflow.FCST_LEN_HRS+1) %}{{ " %02d" % h  }}{% endfor %}'
   native: '{% if platform.get("SCHED_NATIVE_CMD_HPSS") %}{{ platform.SCHED_NATIVE_CMD_HPSS }}{% else %}{{ platform.SCHED_NATIVE_CMD}}{% endif %}'
-  partition: '{% if platform.get("PARTITION_HPSS") %}&PARTITION_HPSS;{% else %}None{% endif %}'
+  partition: '{{ "&PARTITION_HPSS;" if platform.get("PARTITION_HPSS") else "" }}'
   queue: "&QUEUE_HPSS;"
   walltime: 00:45:00
 
@@ -44,7 +44,7 @@ task_get_obs_nohrsc:
     OBTYPE: 'NOHRSC'
     FHR: '{% for h in range(0, workflow.FCST_LEN_HRS+1) %}{{ " %02d" % h  }}{% endfor %}'
   native: '{% if platform.get("SCHED_NATIVE_CMD_HPSS") %}{{ platform.SCHED_NATIVE_CMD_HPSS }}{% else %}{{ platform.SCHED_NATIVE_CMD}}{% endif %}'
-  partition: '{% if platform.get("PARTITION_HPSS") %}&PARTITION_HPSS;{% else %}None{% endif %}'
+  partition: '{{ "&PARTITION_HPSS;" if platform.get("PARTITION_HPSS") else "" }}'
   queue: "&QUEUE_HPSS;"
   walltime: 00:45:00
 
@@ -58,7 +58,7 @@ task_get_obs_mrms:
     VAR: 'REFC RETOP'
     FHR: '{% for h in range(0, workflow.FCST_LEN_HRS+1) %}{{ " %02d" % h  }}{% endfor %}'
   native: '{% if platform.get("SCHED_NATIVE_CMD_HPSS") %}{{ platform.SCHED_NATIVE_CMD_HPSS }}{% else %}{{ platform.SCHED_NATIVE_CMD}}{% endif %}'
-  partition: '{% if platform.get("PARTITION_HPSS") %}&PARTITION_HPSS;{% else %}None{% endif %}'
+  partition: '{{ "&PARTITION_HPSS;" if platform.get("PARTITION_HPSS") else "" }}'
   queue: "&QUEUE_HPSS;"
   walltime: 00:45:00
 
@@ -72,7 +72,7 @@ task_get_obs_ndas:
   command: '&LOAD_MODULES_RUN_TASK; "get_obs" "&JOBSdir;/JREGIONAL_GET_VERIF_OBS"'
   queue: "&QUEUE_HPSS;"
   native: '{% if platform.get("SCHED_NATIVE_CMD_HPSS") %}{{ platform.SCHED_NATIVE_CMD_HPSS }}{% else %}{{ platform.SCHED_NATIVE_CMD}}{% endif %}'
-  partition: '{% if platform.get("PARTITION_HPSS") %}&PARTITION_HPSS;{% else %}None{% endif %}'
+  partition: '{{ "&PARTITION_HPSS;" if platform.get("PARTITION_HPSS") else "" }}'
   walltime: 02:00:00
 
 task_run_MET_Pb2nc_obs:
