--- a/parm/wflow/verify_ens.yaml
+++ b/parm/wflow/verify_ens.yaml
@@ -6,20 +6,27 @@ default_task_verify_ens: &default_task_verify_ens
   envars: &default_vars
     GLOBAL_VAR_DEFNS_FP: '&GLOBAL_VAR_DEFNS_FP;'
     USHdir: '&USHdir;'
-    PDY: !cycstr '@Y@m@d'
-    cyc: !cycstr "@H"
-    subcyc: !cycstr "@M"
-    LOGDIR: !cycstr "&LOGDIR;"
+    PDY:
+      cyclestr:
+        value:  '@Y@m@d'
+    cyc:
+      cyclestr:
+        value:  "@H"
+    subcyc:
+      cyclestr:
+        value:  "@M"
+    LOGDIR:
+      cyclestr:
+        value:  "&LOGDIR;"
     nprocs: '{{ parent.nnodes * parent.ppn }}'
-  join: !cycstr '&LOGDIR;/{{ jobname }}_@Y@m@d@H&LOGEXT;'
-  memory: '{% if user.MACHINE not in ["WCOSS2", "NOAACLOUD"] %}{{ "2G" }}{% endif %}'
+  join:
+    cyclestr:
+      value:  '&LOGDIR;/{{ jobname }}_@Y@m@d@H&LOGEXT;'
+  memory: '{{ "2G" if user.MACHINE not in ["WCOSS2", "NOAACLOUD"] }}'
   native: '{{ platform.SCHED_NATIVE_CMD }}'
-  nnodes: 1
-  nodes: '{{ nnodes }}:ppn={{ ppn }}'
+  cores: !int '{{ verification.execution.cores }}'
   partition: '{{ "&PARTITION_DEFAULT;" if platform.get("PARTITION_DEFAULT") else "" }}'
-  ppn: 1
   queue: '&QUEUE_DEFAULT;'
-  walltime: 01:00:00
 
 metatask_GenEnsProd_EnsembleStat_CCPA:
   var:
@@ -36,6 +43,7 @@ metatask_GenEnsProd_EnsembleStat_CCPA:
       OBTYPE: 'CCPA'
       FCST_LEVEL: 'A#ACCUM_HH#'
       FCST_THRESH: 'all'
+    walltime: "{{ verification.execution.ensemble.genensprod.default.walltime }}"
     dependency:
       and:
         # The PcpCombine task for obs must be complete because this GenEnsProd
@@ -73,6 +81,7 @@ metatask_GenEnsProd_EnsembleStat_NOHRSC:
       OBTYPE: 'NOHRSC'
       FCST_LEVEL: 'A#ACCUM_HH#'
       FCST_THRESH: 'all'
+    walltime: "{{ verification.execution.ensemble.genensprod.default.walltime }}"
     dependency:
       and:
         # The PcpCombine task for obs must be complete because this GenEnsProd
@@ -111,6 +120,7 @@ metatask_GenEnsProd_EnsembleStat_MRMS:
       OBTYPE: 'MRMS'
       FCST_LEVEL: 'L0'
       FCST_THRESH: 'all'
+    walltime: "{{ verification.execution.ensemble.genensprod.default.walltime }}"
     dependency:
       and:
         metataskdep_check_post_output: &check_post_output
@@ -147,7 +157,7 @@ metatask_GenEnsProd_EnsembleStat_NDAS:
       ACCUM_HH: '01'
       FCST_LEVEL: 'all'
       FCST_THRESH: 'all'
-    walltime: 02:30:00
+    walltime: "{{ verification.execution.ensemble.ndas.walltime }}"
     dependency:
       and:
         # The Pb2nc task (which is run only for obs) must be complete because
@@ -163,7 +173,7 @@ metatask_GenEnsProd_EnsembleStat_NDAS:
     envars:
       <<: *envars_GenEnsProd_NDAS
       METPLUSTOOLNAME: 'ENSEMBLESTAT'
-    walltime: 01:00:00
+    walltime: "{{ verification.execution.ensemble.ensemblestat.walltime }}"
     dependency:
       taskdep_genensprod:
         attrs:
@@ -188,6 +198,7 @@ metatask_GridStat_CCPA_ensmeanprob_all_accums:
         ACCUM_HH: '#ACCUM_HH#'
         FCST_LEVEL: 'A#ACCUM_HH#'
         FCST_THRESH: 'all'
+      walltime: "{{ verification.execution.ensemble.gridstat.walltime }}"
       dependency:
         taskdep:
           attrs:
@@ -212,6 +223,7 @@ metatask_GridStat_NOHRSC_ensmeanprob_all_accums:
         ACCUM_HH: '#ACCUM_HH#'
         FCST_LEVEL: 'A#ACCUM_HH#'
         FCST_THRESH: 'all'
+      walltime: "{{ verification.execution.ensemble.gridstat.walltime }}"
       dependency:
         taskdep:
           attrs:
@@ -232,6 +244,7 @@ metatask_GridStat_MRMS_ensprob:
       OBTYPE: 'MRMS'
       FCST_LEVEL: 'L0'
       FCST_THRESH: 'all'
+    walltime: "{{ verification.execution.ensemble.gridstat.walltime }}"
     dependency:
       taskdep:
         attrs:
@@ -256,6 +269,7 @@ metatask_PointStat_NDAS_ensmeanprob:
         ACCUM_HH: '01'
         FCST_LEVEL: 'all'
         FCST_THRESH: 'all'
+      walltime: "{{ verification.execution.ensemble.pointstat.walltime }}"
       dependency:
         taskdep:
           attrs:
